Se agrego codigo java script y css

--- a/index.html
+++ b/index.html
@@ -2,7 +2,13 @@
 <html lang="es">
 <head>
     <title>PaginaWeb.PerezDamas</title>
-    
+    <style>
+        body
+        {
+            background-color: greenyellow;
+            color: black;
+        }
+    </style>
 </head>
 <body>
     <center><u><h1>Asignación a Cursos 2,020</h1></u></center>
@@ -91,6 +97,18 @@
 </div>
 
       </form>
+<br>
+<br>
+<br>
+<img src="C:\Users\angel\Desktop\fondos\273605.jpg">
+
+<script>
+nombre = "Bienvenid@ a mi Pagina web";
+var x = "Hola, ";
+var y = "Como estas? ";
+var w = x + y;
+alert(w + nombre)
+</script>
     
 </body>
 </html>
