--- a/index.html
+++ b/index.html
@@ -100,7 +100,7 @@
 <br>
 <br>
 <br>
-<img src="C:\Users\angel\Desktop\fondos\273605.jpg">
+<img width="800" eight="400" src="C:\Users\angel\Desktop\fondos\273605.jpg">
 
 <script>
 nombre = "Bienvenid@ a mi Pagina web";
@@ -109,6 +109,6 @@ var y = "Como estas? ";
 var w = x + y;
 alert(w + nombre)
 </script>
-    
+
 </body>
 </html>
