se inserto una imagen y un video en la pagina web

--- a/index.html
+++ b/index.html
@@ -91,17 +91,25 @@
   <label for="I">Introducción a los Sistemas de Computo</label>
 </div>
 
-<div class="form-example">
   <br>
-  <input type="submit" value="Asignar">
-</div>
-
+  <div><input type="submit" value="Asignar">
+  </div>
+<br>
+   <div>
+        <input type="reset" value="Limpiar">
+    </div>
       </form>
 <br>
 <br>
+<div>
+    <center><img width="800" eight="400" src="C:\Users\angel\Desktop\fondos\273605.jpg"></center>
+</div>
 <br>
-<img width="800" eight="400" src="C:\Users\angel\Desktop\fondos\273605.jpg">
-
+<br>
+<div>
+    <center><video controls width="800" eight="400" src="C:\Users\angel\Desktop\VID-20200403-WA0000.mp4"></video></center>
+</div>
+<br>
 <script>
 nombre = "Bienvenid@ a mi Pagina web";
 var x = "Hola, ";
