ajustes de imagen, video, fondo y tipo de letra

--- a/index.html
+++ b/index.html
@@ -5,8 +5,26 @@
     <style>
         body
         {
-            background-color: greenyellow;
+           background-color:turquoise;
             color: black;
+        }
+
+        h1
+        {
+            color: yellow;
+            font-family:Georgia;
+            background-color: red;
+        }
+
+        form
+        {
+            font-family: Arial;
+        }
+
+        h2
+        {
+            color: white;
+            background-color: grey;
         }
     </style>
 </head>
@@ -107,7 +125,7 @@
 <br>
 <br>
 <div>
-    <center><video controls width="800" eight="400" src="C:\Users\angel\Desktop\VID-20200403-WA0000.mp4"></video></center>
+    <center><video controls width="800" eight="400" src="C:\laragon\www\PaginaWeb.PerezDamas\archivos multimedia\VID-20200403-WA0000.mp4"></video></center>
 </div>
 <br>
 <script>
